--- a/generators/app/templates/app/modules/account/password/change-password-screen.js.ejs
+++ b/generators/app/templates/app/modules/account/password/change-password-screen.js.ejs
@@ -1,5 +1,5 @@
 import React from 'react'
-import { Alert, Text, TouchableHighlight } from 'react-native'
+import { Text, TouchableHighlight } from 'react-native'
 import { connect } from 'react-redux'
 import { KeyboardAwareScrollView } from 'react-native-keyboard-aware-scroll-view'
 
@@ -50,7 +50,7 @@ class ChangePasswordScreen extends React.Component {
     const value = this.form.getValue()
     if (value) { // if validation fails, value will be null
       if (value.newPassword !== value.confirmPassword) {
-        Alert.alert('Error', 'Passwords do not match', [{ text: 'OK' }])
+        this.props.navigation.navigate('ModalScreen', { title: 'Error', message: 'Passwords do not match' });
         return
       }
       this.props.changePassword(value.currentPassword, value.newPassword)
@@ -60,9 +60,9 @@ class ChangePasswordScreen extends React.Component {
   componentDidUpdate(prevProps) {
     if (prevProps.fetching && !this.props.fetching) {
       if (this.props.error) {
-        Alert.alert('Error', this.props.error, [{ text: 'OK' }])
+        this.props.navigation.navigate('ModalScreen', { title: 'Error', message: this.props.error });
       } else {
-        Alert.alert('Success', 'Password changed', [{ text: 'OK' }])
+        this.props.navigation.navigate('ModalScreen', { title: 'Success', message: 'Password changed' });
       }
     }
   }
