--- a/generators/app/templates/app/navigation/entity.stack.js.ejs
+++ b/generators/app/templates/app/navigation/entity.stack.js.ejs
@@ -8,8 +8,8 @@ import EntitiesScreen from '../modules/entities/entities-screen';
 
 export const entityScreens = [
   {
-    name: 'Entities',
-    route: '',
+    name: 'EntityStack',
+    route: 'all',
     component: EntitiesScreen,
     options: {
       title: 'Entities',
