--- a/generators/app/templates/package.json.ejs
+++ b/generators/app/templates/package.json.ejs
@@ -55,6 +55,10 @@
     "buffer": "REPLACE_WITH_VERSION",
     "enzyme": "REPLACE_WITH_VERSION",
     "enzyme-adapter-react-16": "REPLACE_WITH_VERSION",
+    "@react-native-community/eslint-config": "REPLACE_WITH_VERSION",
+    "babel-jest": "REPLACE_WITH_VERSION",
+    "jest": "REPLACE_WITH_VERSION",
+    "eslint": "REPLACE_WITH_VERSION",
     "eslint-config-prettier": "REPLACE_WITH_VERSION",
     "eslint-plugin-prettier": "REPLACE_WITH_VERSION",
     "generator-jhipster-react-native": "<%= packageVersion %>",
