--- a/generators/app/templates/app/modules/account/password-reset/forgot-password-screen.js.ejs
+++ b/generators/app/templates/app/modules/account/password-reset/forgot-password-screen.js.ejs
@@ -1,5 +1,5 @@
 import React from 'react'
-import { Alert, Text, TouchableHighlight } from 'react-native'
+import { Text, TouchableHighlight } from 'react-native'
 import { connect } from 'react-redux'
 import { KeyboardAwareScrollView } from 'react-native-keyboard-aware-scroll-view'
 
@@ -39,9 +39,9 @@ class ForgotPasswordScreen extends React.Component {
   componentDidUpdate(prevProps) {
     if (prevProps.fetching && !this.props.fetching) {
       if (this.props.error) {
-        Alert.alert('Error', this.props.error, [{ text: 'OK' }])
+        this.props.navigation.navigate('ModalScreen', { title: 'Error', message: this.props.error });
       } else {
-        Alert.alert('Success', 'Password reset email sent', [{ text: 'OK' }])
+        this.props.navigation.navigate('ModalScreen', { title: 'Success', message: 'Password reset email sent' });
         // todo go back on success
         // Navigation.popToRoot(this.props.componentId)
       }
