--- a/generators/app/templates/app/shared/themes/application.styles.js.ejs
+++ b/generators/app/templates/app/shared/themes/application.styles.js.ejs
@@ -60,7 +60,20 @@ const ApplicationStyles = {
       alignSelf: 'stretch',
       justifyContent: 'center',
       marginBottom: 20,
-    }
+    },
+    buttonText: {
+      fontSize: 18,
+      color: 'white',
+      alignSelf: 'center',
+    },
+    formContainer: {
+      padding: 8,
+      flex: 1,
+    },
+    errorText: {
+      color: 'red',
+      fontSize: 14,
+    },
   },
   darkLabelContainer: {
     padding: Metrics.smallMargin,
