--- a/generators/app/templates/app/navigation/drawer.stack.js.ejs
+++ b/generators/app/templates/app/navigation/drawer.stack.js.ejs
@@ -124,6 +124,8 @@ const mapStateToProps = (state) => {
   };
 };
 
-const mapDispatchToProps = (dispatch) => {};
+const mapDispatchToProps = (dispatch) => {
+  return {};
+};
 
 export default connect(mapStateToProps, mapDispatchToProps)(DrawerStack);
