--- a/generators/app/templates/app/shared/util/use-did-update-effect.js.ejs
+++ b/generators/app/templates/app/shared/util/use-did-update-effect.js.ejs
@@ -5,5 +5,6 @@ export function useDidUpdateEffect(fn, inputs) {
     React.useEffect(() => {
         if (didMountRef.current) fn();
         else didMountRef.current = true;
+        // eslint-disable-next-line react-hooks/exhaustive-deps
     }, inputs);
 }
