--- a/generators/app/templates/package.json.ejs
+++ b/generators/app/templates/package.json.ejs
@@ -45,7 +45,9 @@
     "react-native-safe-area-context": "REPLACE_WITH_VERSION",
     "react-native-screens": "REPLACE_WITH_VERSION",
     "react-native-web": "REPLACE_WITH_VERSION",
-    "@expo/vector-icons":"REPLACE_WITH_VERSION"
+    "@expo/vector-icons": "REPLACE_WITH_VERSION",
+    "formik": "REPLACE_WITH_VERSION",
+    "yup": "REPLACE_WITH_VERSION"
   },
   "devDependencies": {
     "@storybook/addons": "REPLACE_WITH_VERSION",
