migrate change-password-screen and forgot-password-screen

--- a/generators/app/templates/app/modules/account/password-reset/forgot-password-screen.js.ejs
+++ b/generators/app/templates/app/modules/account/password-reset/forgot-password-screen.js.ejs
@@ -1,90 +1,75 @@
-import React from 'react'
-import { Text, TouchableHighlight } from 'react-native'
-import { connect } from 'react-redux'
-import { KeyboardAwareScrollView } from 'react-native-keyboard-aware-scroll-view'
+import React, { createRef } from 'react';
+import { Text, View } from 'react-native';
+import { connect } from 'react-redux';
+import { KeyboardAwareScrollView } from 'react-native-keyboard-aware-scroll-view';
+import * as Yup from 'yup';
 
-import ForgotPasswordActions from './forgot-password.reducer'
-import styles from './forgot-password-screen.styles'
+import { useDidUpdateEffect } from '../../../shared/util/use-did-update-effect';
+import { Form, FormButton, FormField } from '../../../shared/components/form';
+import ForgotPasswordActions from './forgot-password.reducer';
+import styles from './forgot-password-screen.styles';
 
+function ForgotPasswordScreen(props){
+  // setup error state for displaying error messages
+  const [error, setError] = React.useState('');
 
-class ForgotPasswordScreen extends React.Component {
-  constructor (props) {
-    super(props)
-/*
-    this.state = {
-      formModel: t.struct({
-        email: t.String
-      }),
-      formValue: this.props.forgotPassword,
-      formOptions: {
-        email: {
-          returnKeyType: 'done',
-          onSubmitEditing: () => this.submitForm()
-        }
-      },
-    }
-*/
-    this.submitForm = this.submitForm.bind(this)
-    this.formChange = this.formChange.bind(this)
-  }
+  // set up validation schema for the form
+  const validationSchema = Yup.object().shape({
+    email: Yup.string().required().email().label('Email'),
+  });
 
-  submitForm () {
-    // call getValue() to get the values of the form
-    const value = this.form.getValue()
-    if (value) { // if validation fails, value will be null
-      this.props.resetPassword(value.email)
-    }
-  }
+  const onSubmit = (data) => props.resetPassword(data.email);
 
-  componentDidUpdate(prevProps) {
-    if (prevProps.fetching && !this.props.fetching) {
-      if (this.props.error) {
-        this.props.navigation.navigate('ModalScreen', { title: 'Error', message: this.props.error });
+  useDidUpdateEffect(() => {
+    if (!props.fetching) {
+      if (props.error) {
+        setError(props.error);
       } else {
-        this.props.navigation.navigate('ModalScreen', { title: 'Success', message: 'Password reset email sent' });
-        // todo go back on success
-        // Navigation.popToRoot(this.props.componentId)
+        props.navigation.navigate('ModalScreen', { title: 'Success', message: 'Password reset email sent' });
       }
     }
-  }
+  }, [props.fetching]);
 
-  formChange (newValue) {
-    this.setState({
-      formValue: newValue
-    })
-  }
+  // create refs for handling onSubmit functionality
+  const formRef = createRef();
 
-  render () {
-    return (
-      <KeyboardAwareScrollView style={styles.container} keyboardShouldPersistTaps={'handled'}>
-        {/*<Form*/}
-        {/*  ref={(c) => {*/}
-        {/*    this.form = c;*/}
-        {/*  }}*/}
-        {/*  type={this.state.formModel}*/}
-        {/*  options={this.state.formOptions}*/}
-        {/*  value={this.state.formValue}*/}
-        {/*  onChange={this.formChange}*/}
-        {/*/>*/}
-        <TouchableHighlight style={styles.button} onPress={this.submitForm} underlayColor='#99d9f4'>
-          <Text style={styles.buttonText}>Reset</Text>
-        </TouchableHighlight>
-      </KeyboardAwareScrollView>
-    )
-  }
+  return (
+    <KeyboardAwareScrollView contentContainerStyle={styles.container}>
+      <View style={styles.formContainer}>
+        <Text style={styles.errorText}>{error}</Text>
+        <Form
+          initialValues={{ email: '' }}
+          validationSchema={validationSchema}
+          onSubmit={onSubmit}
+          ref={formRef}>
+          <FormField
+            name="email"
+            label="Email"
+            placeholder="Enter email"
+            onSubmitEditing={() => formRef?.current?.submitForm()}
+            autoCapitalize="none"
+            keyboardType="email-address"
+            textContentType="username"
+          />
+          <FormButton title={'Reset Password'} />
+        </Form>
+      </View>
+    </KeyboardAwareScrollView>
+  );
 }
+
 
 const mapStateToProps = (state) => {
   return {
     fetching: state.forgotPassword.fetching,
-    error: state.forgotPassword.error
-  }
-}
+    error: state.forgotPassword.error,
+  };
+};
 
 const mapDispatchToProps = (dispatch) => {
   return {
-    resetPassword: (email) => dispatch(ForgotPasswordActions.forgotPasswordRequest(email))
-  }
-}
+    resetPassword: (email) => dispatch(ForgotPasswordActions.forgotPasswordRequest(email)),
+  };
+};
 
-export default connect(mapStateToProps, mapDispatchToProps)(ForgotPasswordScreen)
+export default connect(mapStateToProps, mapDispatchToProps)(ForgotPasswordScreen);
