--- a/generators/app/templates/app/shared/themes/application.styles.js.ejs
+++ b/generators/app/templates/app/shared/themes/application.styles.js.ejs
@@ -20,6 +20,7 @@ const ApplicationStyles = {
     },
     container: {
       flex: 1,
+      padding: 20,
       paddingTop: Metrics.baseMargin,
       backgroundColor: Colors.transparent
     },
