--- a/generators/app/templates/app/modules/account/password/change-password-screen.js.ejs
+++ b/generators/app/templates/app/modules/account/password/change-password-screen.js.ejs
@@ -1,109 +1,109 @@
-import React from 'react'
-import { Text, TouchableHighlight } from 'react-native'
-import { connect } from 'react-redux'
-import { KeyboardAwareScrollView } from 'react-native-keyboard-aware-scroll-view'
+import React, { createRef } from 'react';
+import { Text, View } from 'react-native';
+import { connect } from 'react-redux';
+import { KeyboardAwareScrollView } from 'react-native-keyboard-aware-scroll-view';
 
-import ChangePasswordActions from '../password/change-password.reducer'
-import styles from './change-password-screen.styles'
+import ChangePasswordActions from '../password/change-password.reducer';
+import styles from './change-password-screen.styles';
+import * as Yup from 'yup';
+import { useDidUpdateEffect } from '../../../shared/util/use-did-update-effect';
+import { Form, FormButton, FormField } from '../../../shared/components/form';
 
-class ChangePasswordScreen extends React.Component {
-  constructor (props) {
-    super(props)
-/*
-    this.state = {
-      formModel: t.struct({
-        currentPassword: t.String,
-        newPassword: t.String,
-        confirmPassword: t.String
-      }),
-      formValue: { password: null, confirmPassword: null },
-      formOptions: {
-        fields: {
-          currentPassword: {
-            secureTextEntry: true,
-            testID: 'currentPasswordInput',
-            returnKeyType: 'next',
-            onSubmitEditing: () => this.form.getComponent('newPassword').refs.input.focus()
-          },
-          newPassword: {
-            secureTextEntry: true,
-            testID: 'newPasswordInput',
-            returnKeyType: 'next',
-            onSubmitEditing: () => this.form.getComponent('confirmPassword').refs.input.focus()
-          },
-          confirmPassword: {
-            secureTextEntry: true,
-            testID: 'confirmPasswordInput',
-            returnKeyType: 'done',
-            onSubmitEditing: () => this.submitForm()
-          }
-        }
-      },
+function ChangePasswordScreen (props) {
+  // setup error state for displaying error messages
+  const [error, setError] = React.useState('');
+
+  // set up validation schema for the form
+  const validationSchema = Yup.object().shape({
+    currentPassword: Yup.string().required().label('Current Password'),
+    newPassword: Yup.string().required().label('New Password'),
+    confirmPassword: Yup.string().required().label('Confirm Password'),
+  });
+
+  const onSubmit = (data) => {
+    if (data.newPassword !== data.confirmPassword) {
+      setError('Passwords do not match');
+      return;
     }
-*/
-    this.submitForm = this.submitForm.bind(this)
-    this.formChange = this.formChange.bind(this)
-  }
+    props.changePassword(data.currentPassword, data.newPassword);
+  };
 
-  submitForm () {
-    // call getValue() to get the values of the form
-    const value = this.form.getValue()
-    if (value) { // if validation fails, value will be null
-      if (value.newPassword !== value.confirmPassword) {
-        this.props.navigation.navigate('ModalScreen', { title: 'Error', message: 'Passwords do not match' });
-        return
-      }
-      this.props.changePassword(value.currentPassword, value.newPassword)
-    }
-  }
-
-  componentDidUpdate(prevProps) {
-    if (prevProps.fetching && !this.props.fetching) {
-      if (this.props.error) {
-        this.props.navigation.navigate('ModalScreen', { title: 'Error', message: this.props.error });
+  useDidUpdateEffect(() => {
+    if (!props.fetching) {
+      if (props.error) {
+        setError(props.error);
       } else {
-        this.props.navigation.navigate('ModalScreen', { title: 'Success', message: 'Password changed' });
+        props.navigation.navigate('ModalScreen', { title: 'Sucess', message: 'Password changed' });
       }
     }
-  }
+  }, [props.fetching]);
 
-  formChange (newValue) {
-    this.setState({
-      formValue: newValue
-    })
-  }
+  // create refs for handling onSubmit functionality
+  const formRef = createRef();
+  const currentPasswordRef = createRef();
+  const newPasswordRef = createRef();
+  const confirmPasswordRef = createRef();
 
-  render () {
-    return (
-      <KeyboardAwareScrollView style={styles.container} keyboardShouldPersistTaps={'handled'}>
-        {/*<Form*/}
-        {/*  ref={(c) => {*/}
-        {/*    this.form = c;*/}
-        {/*  }}*/}
-        {/*  type={this.state.formModel}*/}
-        {/*  options={this.state.formOptions}*/}
-        {/*  value={this.state.formValue}*/}
-        {/*  onChange={this.formChange}*/}
-        {/*/>*/}
-        <TouchableHighlight testID='changePasswordSubmitButton' style={styles.button} onPress={this.submitForm} underlayColor='#99d9f4'>
-          <Text style={styles.buttonText}>Save</Text>
-        </TouchableHighlight>
-      </KeyboardAwareScrollView>
-    )
-  }
+  return (
+    <KeyboardAwareScrollView contentContainerStyle={styles.container}>
+      <View style={styles.formContainer}>
+        <Text style={styles.errorText}>{error}</Text>
+        <Form
+          initialValues={{ currentPassword: '', confirmPassword: '', newPassword: '' }}
+          validationSchema={validationSchema}
+          onSubmit={onSubmit}
+          ref={formRef}>
+          <FormField
+            ref={currentPasswordRef}
+            name="currentPassword"
+            label="Current Password"
+            placeholder="Enter current password"
+            autoCapitalize="none"
+            autoCorrect={false}
+            secureTextEntry={true}
+            onSubmitEditing={() => newPasswordRef?.current?.focus()}
+            textContentType="password"
+          />
+          <FormField
+            ref={newPasswordRef}
+            name="newPassword"
+            label="New Password"
+            placeholder="Enter new password"
+            autoCapitalize="none"
+            autoCorrect={false}
+            secureTextEntry={true}
+            onSubmitEditing={() => confirmPasswordRef?.current?.focus()}
+            textContentType="password"
+          />
+          <FormField
+            ref={confirmPasswordRef}
+            name="confirmPassword"
+            label="Confirm Password"
+            placeholder="Enter new password"
+            autoCapitalize="none"
+            autoCorrect={false}
+            secureTextEntry={true}
+            onSubmitEditing={() => formRef?.current?.submitForm()}
+            textContentType="password"
+          />
+          <FormButton title={'Register'} />
+        </Form>
+      </View>
+    </KeyboardAwareScrollView>
+  );
 }
 
 const mapStateToProps = (state) => {
   return {
     fetching: state.changePassword.fetching,
-    error: state.changePassword.error
-  }
-}
+    error: state.changePassword.error,
+  };
+};
 
 const mapDispatchToProps = (dispatch) => {
   return {
-    changePassword: (currentPassword, newPassword) => dispatch(ChangePasswordActions.changePasswordRequest(currentPassword, newPassword))
-  }
-}
+    changePassword: (currentPassword, newPassword) => dispatch(ChangePasswordActions.changePasswordRequest(currentPassword, newPassword)),
+  };
+};
 
-export default connect(mapStateToProps, mapDispatchToProps)(ChangePasswordScreen)
+export default connect(mapStateToProps, mapDispatchToProps)(ChangePasswordScreen);
